hphp/hack/test/typecheck/invalid_is_nothing.php.exp
File "invalid_is_nothing.php", line 5, characters 13-19:
Invalid `is` expression hint (Typing[4195])
  File "invalid_is_nothing.php", line 5, characters 13-19:
  The `is` operator cannot be used with the `nothing` type
